Bringup saved logs
Signed-off-by: kiranpranay <kiranpranay12@gmail.com>

--- a/projects/guru/config.json
+++ b/projects/guru/config.json
@@ -8,6 +8,10 @@
     {
       "label": "remove hp",
       "img": "step1_f4c886.png"
+    },
+    {
+      "label": "kuch nai",
+      "img": null
     }
   ]
 }
