Add components library
Signed-off-by: kiranpranay <kiranpranay12@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,5 @@ instance/
 
 # ── Admin-generated project assets (created in prod) ──────────────────────
 tbag/projects/
+tbag/components/
 ###############################################################################
