ignore events.db
Signed-off-by: kiranpranay <kiranpranay12@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ wheelhouse/
 *.tar.gz
 *.zip
 .eggs/
+events.db
 
 # ── Jupyter notebooks ─────────────────────────────────────────────────────
 .ipynb_checkpoints/
