Ignore settings.json
Signed-off-by: kiranpranay <pranay@cottonseeds.org>

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ instance/
 tbag/projects/
 tbag/components/
 ###############################################################################
+
+# settings data
+data/settings.json
