Implement Position based led selections
Signed-off-by: kiranpranay <pranay@cottonseeds.org>

--- a/data/settings.json
+++ b/data/settings.json
@@ -72,5 +72,19 @@
       "z": 39.0,
       "r": 16.0
     }
+  },
+  "led_mapping": {
+    "P1": 5,
+    "P2": 6,
+    "P3": 13,
+    "P4": 0,
+    "P5": 27,
+    "P6": 17,
+    "P7": 10,
+    "P8": 22,
+    "P9": 27,
+    "P10": 0,
+    "P21": 7,
+    "P22": 8
   }
 }
